save buttonstates + get long + lat to live data

--- a/starter/app/src/main/res/layout/fragment_select_location.xml
+++ b/starter/app/src/main/res/layout/fragment_select_location.xml
@@ -32,6 +32,7 @@
             android:textColor="@color/white"
             android:background="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:visibility="gone"
             android:text="@string/save" />
 
 
