--- a/starter/app/src/main/res/layout/fragment_select_location.xml
+++ b/starter/app/src/main/res/layout/fragment_select_location.xml
@@ -16,24 +16,23 @@
 
         <fragment xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:map="http://schemas.android.com/apk/res-auto"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
             android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            map:layout_constraintTop_toTopOf="parent"
             map:layout_constraintBottom_toTopOf="@id/save_location_button"
-            />
+            map:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/save_location_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:textColor="@color/white"
             android:background="@color/colorAccent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:padding="16dp"
+            android:text="@string/save"
+            android:textColor="@color/white"
             android:visibility="gone"
-            android:text="@string/save" />
+            app:layout_constraintBottom_toBottomOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
