--- a/starter/app/src/main/res/values/styles.xml
+++ b/starter/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="@style/Theme.Material3.Light.NoActionBar">
+    <style name="AppTheme" parent="@style/Theme.Material3.Light">
 
     </style>
 
